# giygas

./: .gitignore  .travis.yml  CMakeLists.txt  Config.cmake.in  Dockerfile  README.md  dewfile.json  dewfile.refs.json
core/: CMakeLists.txt  config.hpp.in
core/include/giygas/: AttachmentPurpose.hpp  AttachmentType.hpp  ColorChannels.hpp  CommandBuffer.hpp  CommandPool.hpp  Context.hpp  DescriptorPool.hpp  DescriptorSet.hpp  ElementBuffer.hpp  ElementDrawInfo.hpp  EventHandler.hpp  FrameBufferSurface.hpp  Framebuffer.hpp  GLContext.hpp  GLFWContext.hpp  GLFWWindow.hpp  GLFWWindowInitOptions.hpp  IndexBuffer.hpp  IndexRange.hpp  InputKey.hpp  Material.hpp  Matrix4x4.hpp  Pipeline.hpp  PipelineCreateParameters.hpp  PipelineOptions.hpp  PixelFormat.hpp  Primitive.hpp  PushConstantsRange.hpp  Quaternion.hpp  RenderBuffer.hpp  RenderPass.hpp  RenderPassCreateParameters.hpp  RenderTarget.hpp  Renderer.hpp  RendererInitOptions.hpp  RendererType.hpp  Sampler.hpp  SamplerOptions.hpp  SamplerParameters.hpp  ScissorRange.hpp  (+15 more)
core/include/giygas/validation/: command_buffer_validation.hpp  descriptor_set_validation.hpp  framebuffer_validation.hpp  pipeline_validation.hpp  render_pass_validation.hpp  submission_validation.hpp
core/src/: AttachmentType.cpp  CommandBuffer.cpp  CommandBufferImpl.hpp  GLFWContext.cpp  GLFWWindow.cpp  GLFWWindowInitOptions.cpp  Matrix4x4.cpp  PipelineCreateParameters.cpp  PipelineOptions.cpp  RendererInitOptions.cpp  SamplerOptions.cpp  SamplerParameters.cpp  Vector2.cpp  Vector3.cpp  Vector4.cpp  VertexAttributeLayout.cpp  giygas.cpp  giygas_internal.cpp  giygas_internal.hpp  glfw_key_mappings.hpp  glfw_translate_key.cpp  glfw_translate_key.hpp
core/src/gl/: GL.hpp  GLElementBuffer.cpp  GLElementBuffer.hpp  GLFrameBufferSurface.cpp  GLFrameBufferSurface.hpp  GLImpl.cpp  GLImpl.hpp  GLMainSurface.cpp  GLMainSurface.hpp  GLMaterial.cpp  GLMaterial.hpp  GLOperation.hpp  GLOperationPools.cpp  GLOperationPools.hpp  GLRenderBuffer.cpp  GLRenderBuffer.hpp  GLRenderer.cpp  GLRenderer.hpp  GLShader.cpp  GLShader.hpp  GLSurfaceRenderer.cpp  GLSurfaceRenderer.hpp  GLTexture.cpp  GLTexture.hpp  GLUniformValue.cpp  GLUniformValue.hpp  GLVertexArray.cpp  GLVertexArray.hpp  GLVertexBuffer.cpp  GLVertexBuffer.hpp  Pool.cpp  Pool.hpp  gl_enum_conversions.cpp  gl_enum_conversions.hpp
core/src/gl/operations/: AttachRenderbufferToFramebufferGLOperation.cpp  AttachRenderbufferToFramebufferGLOperation.hpp  AttachTextureToFramebufferGLOperation.cpp  AttachTextureToFramebufferGLOperation.hpp  BufferDataGLOperation.cpp  BufferDataGLOperation.hpp  BufferSubDataGLOperation.cpp  BufferSubDataGLOperation.hpp  ClearGLOperation.cpp  ClearGLOperation.hpp  CompileShaderGLOperation.cpp  CompileShaderGLOperation.hpp  CreateProgramGLOperation.cpp  CreateProgramGLOperation.hpp  CreateRenderbufferStorageGLOperation.cpp  CreateRenderbufferStorageGLOperation.hpp  CreateShaderGLOperation.cpp  CreateShaderGLOperation.hpp  CreateTextureStorageGLOperation.cpp  CreateTextureStorageGLOperation.hpp  CreateTextureStorageSyncedGLOperation.cpp  CreateTextureStorageSyncedGLOperation.hpp  DeleteBufferGLOperation.cpp  DeleteBufferGLOperation.hpp  DeleteFramebufferGLOperation.cpp  DeleteFramebufferGLOperation.hpp  DeleteProgramGLOperation.cpp  DeleteProgramGLOperation.hpp  DeleteRenderbufferGLOperation.cpp  DeleteRenderbufferGLOperation.hpp  DeleteShaderGLOperation.cpp  DeleteShaderGLOperation.hpp  DeleteTextureGLOperation.cpp  DeleteTextureGLOperation.hpp  DeleteVertexArrayGLOperation.cpp  DeleteVertexArrayGLOperation.hpp  GenBufferGLOperation.cpp  GenBufferGLOperation.hpp  GenFramebufferGLOperation.cpp  GenFramebufferGLOperation.hpp  (+24 more)
core/src/gl/operations/Pipeline/: PipelineEnableDisableGLOperation.cpp  (+3 more)
core/src/validation/: command_buffer_validation.cpp  framebuffer_validation.cpp  pipeline_validation.cpp  render_pass_validation.cpp  submission_validation.cpp  validation_common.hpp
core/src/vulkan/: QueueFamilyIndices.cpp  QueueFamilyIndices.hpp  ReadOnlyBuffer.cpp  ReadOnlyBuffer.hpp  SwapchainInfo.hpp  SwapchainSafeDeleteable.hpp  VulkanCommandBuffer.cpp  VulkanCommandBuffer.hpp  VulkanCommandPool.cpp  VulkanCommandPool.hpp  VulkanDescriptorPool.cpp  VulkanDescriptorPool.hpp  VulkanDescriptorSet.cpp  VulkanDescriptorSet.hpp  VulkanFramebuffer.cpp  VulkanFramebuffer.hpp  VulkanIndexBuffer.cpp  VulkanIndexBuffer.hpp  VulkanMaterial.cpp  VulkanMaterial.hpp  VulkanPipeline.cpp  VulkanPipeline.hpp  VulkanReadOnlyVertexBuffer.cpp  VulkanReadOnlyVertexBuffer.hpp  VulkanRenderBuffer.cpp  VulkanRenderBuffer.hpp  VulkanRenderPass.cpp  VulkanRenderPass.hpp  VulkanRenderTarget.hpp  VulkanRenderer.cpp  VulkanRenderer.hpp  VulkanSampler.cpp  VulkanSampler.hpp  VulkanShader.cpp  VulkanShader.hpp  VulkanSwapchain.cpp  VulkanSwapchain.hpp  VulkanSwapchainRenderTarget.cpp  VulkanSwapchainRenderTarget.hpp  VulkanTexture.cpp  (+11 more)
core/test/: TestGLElementBuffer.cpp  TestGLMaterial.cpp  TestGLShader.cpp  TestGLTexture.cpp  TestGLVertexArray.cpp  TestGLVertexBuffer.cpp
core/test/gl/: TestGLElementBuffer.cpp  TestGLMaterial.cpp  TestGLShader.cpp  TestGLTexture.cpp  TestGLVertexArray.cpp  TestGLVertexBuffer.cpp
core/test/gl/mocks/: MockGL.hpp
core/test/mocks/: MockGL.hpp
examples/: CMakeLists.txt  async_buffer.cpp  example_common.cpp  example_common.hpp  framebuffers.cpp  input.cpp  texture.cpp  triangle.cpp
examples/content/: color.vs.glsl  textured.fs.glsl  textured.vs.glsl
examples/content/shaders/: color.vs.glsl  example_texture.fs.glsl  example_texture.vs.glsl  input_example.fs.glsl  input_example.vs.glsl  textured.fs.glsl  textured.vs.glsl  triangle.fs.glsl  triangle.vs.glsl
examples/content/textures/: logo.tga  logo_rgb.tga
giygasfile/: CMakeLists.txt
giygasfile/include/giygasfile/: FileIterable.hpp  GiygasFileParser.hpp  InputIterable.hpp  NodeTag.hpp
util/: CMakeLists.txt
util/include/giygasutil/: EventLoopContextRunner.hpp  GameLoopDelegate.hpp  GameLoopRunner.hpp  SpriteBatch.hpp  paths.hpp  util.hpp
util/src/: EventLoopContextRunner.cpp  GameLoopRunner.cpp  SpriteBatch.cpp  paths.cpp  util.cpp
(+118 files in other folders)
